--- a/.hintrc
+++ b/.hintrc
@@ -4,6 +4,14 @@
   ],
   "hints": {
     "highest-available-document-mode": "off",
-    "disown-opener": "off"
+    "disown-opener": "off",
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "scroll-behavior"
+        ]
+      }
+    ]
   }
 }
